[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/actors/objects/yellow_coin/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/yellow_coin/yellow.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/actors/objects/yellow_coin/coin.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 9.0

[node name="Coin" type="Node2D"]
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 17
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = ExtResource( 2 )
playing = true

[node name="KinematicShape" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 4 )
disabled = true

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 1 )
disabled = true

[node name="WaterDetector" type="Area2D" parent="KinematicBody2D"]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/WaterDetector"]
shape = SubResource( 2 )
disabled = true

[node name="EditorArea" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/EditorArea"]
shape = SubResource( 3 )

[node name="BottomPos" type="Node2D" parent="KinematicBody2D"]
position = Vector2( 0, 8 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -512, -512, 1024, 1024 )
freeze_bodies = false
process_parent = true
